Dark mode watching and bug fixes
- bug fix: All borad now sorts alphabetically
- optimizing board - reducing number of watchers
- Fixed scrolling issue on mobile when editing a board
- Added visibility change watcher for app

--- a/public/main.css
+++ b/public/main.css
@@ -7120,6 +7120,26 @@ body .main-content:before {
   position: fixed;
   background-color: transparent; }
 
+body.hidden {
+  background-color: var(--color-primary);
+  display: flex !important;
+  justify-content: center;
+  align-content: center;
+  height: 100vh; }
+  body.hidden:after {
+    content: '';
+    background-image: url(images/nomie-white-type.png);
+    display: block;
+    width: 200px;
+    height: 40px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    justify-self: center;
+    align-self: center; }
+  body.hidden * {
+    display: none; }
+
 body.offline .main-content:before {
   transition: all 0.2s ease-in-out;
   content: 'No internet connection';
